# sp1-solana

./: .gitignore  Cargo.toml  FIXTURES.md  README.md
programs/sp1-verify-spike/: Cargo.toml
programs/sp1-verify-spike/src/: lib.rs  verifier.rs  vk.rs
scripts/: Cargo.toml
scripts/src/: main.rs  onchain_tx.rs  tx_size_sweep.rs
