[package]
name = "sp1-verify-spike-script"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sp1-verify-spike = { path = "../programs/sp1-verify-spike" }
solana-program-test.workspace = true
solana-sdk.workspace = true
tokio.workspace = true
hex.workspace = true
parity-scale-codec.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
sha3.workspace = true
