[package]
name = "sp1-verify-spike"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh.workspace = true
solana-program.workspace = true
parity-scale-codec.workspace = true
sha2.workspace = true
hex.workspace = true
groth16-solana.workspace = true
num-bigint.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
